# jalali-calendar-qt

./: .gitignore  LICENSE  README.md  pyproject.toml
src/jalali_calendar_qt/: __init__.py  date_edit.py  datepicker.py  datetime_edit.py  time_edit.py  timepicker.py  utils.py
